--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,9 @@ License: LGPL-3
 Encoding: UTF-8
 LazyData: true
 Depends:
-  R (>= 3.6)
+  R (>= 3.6),
+  CytoGLMM
 Imports:
-  CytoGLMM,
   dplyr,
   ggplot2,
   ggrepel,
