Add S4vectors metadata method to importFrom

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ import(CytoGLMM)
 import(ggplot2)
 importFrom(ComplexHeatmap,Heatmap)
 importFrom(ComplexHeatmap,HeatmapAnnotation)
+importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
