Update documentation (NAMESPACE and manual page)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(prepare_data_for_volcanoplot)
 export(volcano_plot)
 import(CytoGLMM)
 import(ggplot2)
+importClassesFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(ComplexHeatmap,Heatmap)
 importFrom(ComplexHeatmap,HeatmapAnnotation)
 importFrom(S4Vectors,metadata)
@@ -19,5 +20,4 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(ggrepel,geom_text_repel)
 importFrom(grid,gpar)
-importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
