Correct type Specify an exact version for CATALYST

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,15 +4,15 @@ Title: Tools box for the analysis of CyTOF data
 Version: 0.1.0
 Authors@R: person("Anne-Maud", "Ferreira", email = "anne-maud.ferreirat@stanford.edu",
                   role = c("aut", "cre"))
-Description: This package regroups many tools for the analysis of CyTOF data.
-  It is use in the laboratory of Prof. Catherine Blish. 
+Description: This package regroups visualization tools for the analysis of CyTOF data.
+  It is used in the laboratory of Prof. Catherine Blish. 
 License: LGPL-3
 Encoding: UTF-8
 LazyData: true
 Depends:
   R (>= 3.6)
 Imports:
-  CATALYST (>= 1.10.3),
+  CATALYST (== 1.10.3),
   CytoGLMM,
   ComplexHeatmap,
   cowplot,
